# mat5

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs  matfile.rs
scripts/: load_file.m  write_mat.m
src/: byte_count.rs  container.rs  lib.rs  main.rs  num.rs  parse.rs  prelude.rs  traits.rs  utils.rs  write_matrix.rs
tests/: array_writing.rs  derived_impls.rs
