[package]
name = "mat5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"
nom = "7.1.0"
thiserror = "1.0.30"
flate2 = { version = "1.0.22", features = ["zlib"], default-features=false }
derive = { path = "./derive" }
